fix(qannotate): snpeff records were not being dealy with correctly when the variation was 1/2
If multiple alts were present (1/2) then nanno was not able to retreive the snpeff annotation